--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: ocrmind
     runtime: python
-    buildCommand: "pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "python main.py"
+    buildCommand: "cd 3_WebApp && pip install --upgrade pip && pip install -r requirements.txt"
+    startCommand: "cd 3_WebApp && gunicorn main:app"
     region: oregon
     plan: free
     envVars:
