--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,13 @@ services:
     name: ocrmind
     runtime: python
     buildCommand: "cd 3_WebApp && pip install --upgrade pip && pip install -r requirements.txt"
-    startCommand: "cd 3_WebApp && gunicorn main:app"
+    startCommand: "gunicorn main:app"
     region: oregon
     plan: free
     envVars:
       - key: FLASK_ENV
         value: production
+    buildFilter:
+      paths:
+        - 3_WebApp/**
+    rootDir: 3_WebApp
