--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,34 @@
 services:
   - type: web
     name: ocrmind
-    runtime: python  # CORRECTED: Use 'runtime' instead of 'env'
+    runtime: python
     region: oregon
     plan: free
 
-    # Pin the Python version to match your development environment
+    # ===================================
+    #   Environment & Secret Variables
+    # ===================================
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.9 # Change to your specific Python version
 
-    # Command to install dependencies from the subdirectory
-    buildCommand: "pip install -r 3_WebApp/requirements.txt"
+      # --- Example for adding a secret API key ---
+      # - key: MY_API_KEY
+      #   value: "some_secret_value_here"
 
-    # Command to start the server from the subdirectory
+      # --- Example for adding a database connection string ---
+      # - key: DATABASE_URL
+      #   fromSecret: true # Recommended for sensitive data
+
+    # ===================================
+    #    Build & Start Commands
+    # ===================================
+    buildCommand: "pip install -r 3_WebApp/requirements.txt"
     startCommand: "gunicorn --workers 3 --chdir 3_WebApp main:app"
 
-    # Optional: Prevents unnecessary builds
+    # ===================================
+    #   Optional Build Filter
+    # ===================================
     buildFilter:
       paths:
         - "3_WebApp/**.py"
